# cherry-pipelines

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-init.sql  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  publish_docker.yaml  publish_python.yaml
pipelines/: config.py  db.py  env_config.py  setup_env.py
pipelines/evm/: erc20_transfers.py
pipelines/evm/erc20_transfers/: pipeline.py  setup.sql
protocol_schemas/: AI_gen_dex_schema.arrow  dex_schema.graphql
scripts/: main.py  runner.py
src/cherry_pipelines/: __init__.py  config.py  db.py
src/cherry_pipelines/evm/: __init__.py  chain_id.py  chain_name.py  erc20_transfers.py  pipeline.py
src/cherry_pipelines/evm/stablecoins/: stablecoin_factory.py
src/cherry_pipelines/evm/uniswap_v2_forks/: initdb.py  transformations.py  uniswap_v2_forks.py
src/cherry_pipelines/svm/: __init__.py  common_signatures.py  meteora_swaps.py  orca_metadata.py  orca_swaps.py  pipeline.py  raydium_swaps.py  swap_prices.py  token_decimals.py
