[project]
name = "cherry-pipelines"
version = "0.0.16"
description = "A collection of blockchain data pipelines built with cherry"
repository = "https://github.com/steelcake/cherry-pipelines"
homepage = "https://github.com/steelcake/cherry-pipelines"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "cherry-core>=0.6.1",
    "cherry-etl>=0.7.1",
    "clickhouse-connect>=0.8.17",
    "dotenv>=0.9.9",
    "pyarrow>=20.0.0",
    "pyarrow-stubs>=19.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    # "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
